[package]
name = "napirs"
version = "0.1.0"
authors = ["Tobias Hölzer <tobiashoelzer@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "0.5" }
napi-derive = { version = "0.5" }

[build-dependencies]
napi-build = "0.2"

[profile.release]
opt-level = 3
lto = true
