[package]
name = "wasm"
version = "0.1.0"
authors = ["Tobias Hölzer <tobiashoelzer@hotmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
